--- a/day1.html
+++ b/day1.html
@@ -19,5 +19,13 @@
     <p style="font-size: 40px;">Im sailesh</p> -->
     <p>Hii</p>
     <h1>IM Sailesh</h1>
+    <h2>hello</h2>
+    <picture>
+        <source media="(min-width: 870px)" srcset="istockphoto-1254474165-612x612.jpg">
+        <source media="(min-width: 650px)" srcset="istockphoto-1296344118-612x612.jpg">
+        <source media="(min-width: 450px)" srcset="istockphoto-1317323736-612x612.jpg">
+        <img src="istockphoto-1337232523-612x612.jpg" height="500" width="500">
+    </picture>
+    
 </body>
 </html>
