--- a/cssd2.html
+++ b/cssd2.html
@@ -17,5 +17,35 @@
     <div class="pic">
         <img src="istockphoto-1254474165-612x612.jpg" >
     </div>
+    <div class="one">
+        <h1>hi</h1>
+        <h1>hello</h1>
+        <h2>how are you</h2>
+        <h1>Im fine</h1>
+        <section>
+            <h1>welcome</h1>
+            <h1>to</h1>
+            <h2>KGISL</h2>
+            <h1>Micro college</h1>
+        </section>
+    </div>
+    <h1>cbe</h1>
+    <h1>chennai</h1>
+    <div class="two">
+        <h1>hi....</h1>
+        <h1>hello.....</h1>
+        <h2>how are you.....</h2>
+        <h1>Im fine......</h1>
+        <section>
+            <h1>welcome......</h1>
+            <h1>to.......</h1>
+            <h2>KGISL.....</h2>
+            <h1>Micro college.......</h1>
+        </section>
+    </div>
+    <h1>orange</h1>
+    <h1>mango</h1>
+    <p>Flowers carry a lot of importance in our lives. In India, no worship of God <span class="main">This is span text</span> complete without some kind of flower. Devotees make a garland of flowers to dedicate it to God. In addition, we also use flowers for special occasions like weddings.</p>
+
 </body>
 </html>
