--- a/Day2task/d2task.html
+++ b/Day2task/d2task.html
@@ -136,5 +136,88 @@
             </table>
         </form>
     </div>
+    <div class="Div_Three">
+        <form>
+            <table>
+                <h1>Student Registration Form</h1>
+                <tr>
+                    <td><label>First Name :</label></td>
+                </tr>
+                <tr>    
+                    <td><input type="text" placeholder="Firstname"></td>
+                </tr>
+                <tr>
+                    <td><label>Middlename Name :</label></td>
+                </tr>
+                <tr>    
+                    <td><input type="text" placeholder="Middlename"></td>
+                </tr>
+                <tr>
+                    <td><label>Last Name :</label></td>
+                </tr>
+                <tr>
+                    <td><input type="text" placeholder="Lastname"></td>
+                </tr>
+                <tr>
+                    <td><label>Course :</label></td>
+                    <td><select>
+                        <option>Course</option>
+                        <option>Full Stack</option>
+                        <option>Web development</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Gender :</label></td>
+                    <td>
+                        <input type="radio" name="Gender">Male
+                        <input type="radio" name="Gender">Female
+                        <input type="radio" name="Gender">Other
+                    </td>
+                    
+                </tr>
+                <tr>
+                    <td>
+                        <label>Phone :</label>
+                    </td>
+                </tr>
+                <tr>    
+                    <td>
+                        <input type="text" placeholder="+91" >                       
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="number" minlength="10">
+                    </td>
+                </tr>
+                <tr>
+                    <td><label>Current Address :</label></td>
+                </tr>
+                <tr>
+                    <td><textarea placeholder="Current Address"></textarea></td>
+                </tr>
+                <tr>
+                    <td><label>Email :</label></td>
+                </tr>
+                <tr>
+                    <td><input type="email" placeholder="Enter Email"></td>
+                </tr>
+                <tr>
+                    <td><label>Password :</label></td>
+                </tr>
+                <tr>
+                    <td><input type="password" placeholder="Enter Password"></td>
+                </tr>
+                <tr>
+                    <td><label>Re-type Password :</label></td>
+                </tr>
+                <tr>
+                    <td><input type="password" placeholder="Re-type Password"></td>
+                </tr>
+            </table>
+            <input type="submit" class="Submit">
+        </form>
+    </div>
 </body>
 </html>
