--- a/Animal Society/project.html
+++ b/Animal Society/project.html
@@ -16,7 +16,7 @@
             <h2 class="Ani_HeadTwo">A Non-Profit Trust Helping Animals.</h2>
         </div>
         <div>
-            <button class="Button_One">JOIN WITH US</button>
+            <button class="Button_One" ><a href="www.google.com">JOIN WITH US</a></button>
         </div>
     </div>
 </body>
